@@ -1,3 +1,5 @@
+        - Introduce --base-foundry, --data-file, and --header-file parameters
+
 1.00 2021-02-18 Release
         - -s option added that uses sentence boundaries provided by the KorAP tokenizer (-tk)
         - Tokenizer invocation comments removed from KorAP XML output
